--- a/resources/pages/terminal/configTermClass.html
+++ b/resources/pages/terminal/configTermClass.html
@@ -1,4 +1,4 @@
-<div class="modal-content" style="pposition: relative; margin: auto; margin-left: -300px; width: 600px; left:50%; max-height: 560px;">
+<div class="modal-content" style="position: relative; margin: auto; margin-left: -303px; width: 606px; left:50%; max-height: 560px;">
     <div class="modal-header">
         <button id="CC-close" type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">×</span>
