--- a/resources/pages/terminal/configOneTerm.html
+++ b/resources/pages/terminal/configOneTerm.html
@@ -20,7 +20,7 @@
               <label class="col-sm-2 control-label">当前频道</label>
               <div class="col-sm-10">
                 <div class="checkbox">
-                    <label id="CO-channel" style="padding-left: 0; cursor: default;"></label>
+                    <a class="to-Channel"><label id="CO-channel" style="padding-left: 0;"></label></a>
                 </div>
               </div>
             </div>
