--- a/resources/pages/terminal/configOneTerm.html
+++ b/resources/pages/terminal/configOneTerm.html
@@ -28,7 +28,7 @@
               <label class="col-sm-2 control-label">预下发频道</label>
               <div class="col-sm-10">
                 <div class="checkbox">
-                    <label id="CO-preChannel" style="padding-left: 0; cursor: default;"></label>
+                    <a class="to-preChannel"><label id="CO-preChannel" style="padding-left: 0;"></label></a>
                 </div>
               </div>
             </div>
