--- a/resources/pages/terminal/configOneTerm.html
+++ b/resources/pages/terminal/configOneTerm.html
@@ -72,6 +72,15 @@
                 </div>
               </div>
             </div>
+            <div class="form-group">
+              <label class="col-sm-2 control-label">log</label>
+              <div class="col-sm-10">
+                <div class="checkbox">
+                    <button id="CO-log" type="button" class="btn btn-primary btn-xs pull-left">获取</button>
+                    &nbsp;&nbsp;<a id="CO-log-download">点我下载</a>
+                </div>
+              </div>
+            </div>
         </form>   
 
         <div class="form-group">   
