--- a/resources/pages/terminal/configOneTerm.html
+++ b/resources/pages/terminal/configOneTerm.html
@@ -72,7 +72,7 @@
                 </div>
               </div>
             </div>
-            <div class="form-group">
+            <div id="CO-log-box" class="form-group">
               <label class="col-sm-2 control-label">log</label>
               <div class="col-sm-10">
                 <div class="checkbox">
