--- a/resources/pages/materials/materials_addLive.html
+++ b/resources/pages/materials/materials_addLive.html
@@ -12,10 +12,11 @@
         <div class="form-group">
             <label>直播源地址：</label>
             <input type="text" class="form-control" id="ULmtr_address" placeholder="请输入直播源地址">
+            <small class="tips"><i class="fa fa-info-circle" >&nbsp例:http://tv.cctv.com/live/cctv1.m3u8</i></small>
         </div>
     </div>
     <div class="modal-footer">
-        <!--<button type="button" class="btn btn-default pull-left CA_close" data-dismiss="modal">返回</button>-->
+
         <button id="ULmtr_add" type="button" class="btn btn-primary pull-right">提交</button>
     </div>
 </div>
