--- a/login.html
+++ b/login.html
@@ -27,57 +27,23 @@
     <div class="dynamicBG"></div>
 </div>
 
-
-<div class="login-box" style="position: absolute; margin-left: -180px; left: 50%; margin-top: 7%;">
-
-    <div class="login-logo" style="color: white; margin-bottom: 12px;">
+<div class="login-box">
+    <div class="login-logo">
         <a style="cursor:default;color: white; font-size: 36px;"><b>CLEAR</b>&nbsp;信息发布系统</a>
     </div>
     <!-- /.login-logo -->
-    <div class="login-box-body" style="background-color: rgba(255,255,255,.85)">
-        <!--<p class="login-box-msg">Sign in to start your session</p>-->
-        <h3 style="margin-bottom: 30px; text-align: center;">登录Clear Cloud 账户</h3>
+    <div class="login-box-body">
+        <h3>登录Clear Cloud 账户</h3>
         <input id="username" name="username" class="form-control" placeholder="账号">
         <br/>
         <input id="password" name="password" type="password" class="form-control" placeholder="密码">
         <br/>
         <input id="submit" type="submit" class="btn btn-primary btn-block btn-flat" value="登&nbsp;&nbsp;&nbsp;录">
-
-        <!--<form method='POST' action='/' onsubmit="return inputCheck()">-->
-        <!--<div class="form-group has-feedback">-->
-            <!--<input id="l_username" type="text" class="form-control" placeholder="账号" onchange="usernameChenge(value)">-->
-            <!--<ul class="l_userlist">-->
-                <!--&lt;!&ndash;<p></p>&ndash;&gt;-->
-            <!--</ul>-->
-            <!--<span class="glyphicon glyphicon-user form-control-feedback"></span>-->
-        <!--</div>-->
-        <!--&lt;!&ndash; <small style="font-size: 12px; margin-bottom: 4px; line-height: 20px; position: relative; top: -8px;">账号格式为 <strong>用户名@项目名</strong>，如 root@cleartv </small> &ndash;&gt;-->
-        <!--<div class="form-group has-feedback">-->
-            <!--<input id="l_password" name="j_password" type="password" class="form-control" placeholder="密码">-->
-            <!--<span class="glyphicon glyphicon-lock form-control-feedback"></span>-->
-        <!--</div>-->
-        <!--&lt;!&ndash; <small style="font-size: 12px; margin-bottom: 4px; line-height: 50px; position: relative; top: -21px;">如果忘记密码，可以联系管理员重置 </small> &ndash;&gt;-->
-        <!--<input id="j_username" name="j_username"  type="text" style="display: none;" />-->
-        <!--<input id="j_project_name" name="j_project_name"  type="text" style="display: none;" />-->
-        <!--<div class="row">-->
-            <!--&lt;!&ndash; /.col &ndash;&gt;-->
-            <!--<div style="padding: 0px 15px; text-align: center;">-->
-                <!--<input id="l_submit" type="submit" class="btn btn-primary btn-block btn-flat" value="登&nbsp;&nbsp;&nbsp;录">-->
-                <span id="error_m"></span>
-                <!--<c:if test='${not empty param.error}'>-->
-                    <!--<font color='#3c8dbc'>-->
-                        <!--您输入的用户名或密码错误！-->
-                    <!--</font>-->
-                <!--</c:if>-->
-            <!--</div>-->
-            <!--&lt;!&ndash; /.col &ndash;&gt;-->
-        <!--</div>-->
-        <!--</form>-->
-
+        <span id="error_m"></span>
     </div>
     <!-- /.login-box-body -->
 </div>
 <!-- /.login-box -->
-<div id="l_version" style="color: white"><b>Version</b> 3.0.1</div>
+<div id="l_version"><b>Version</b> 3.0.1</div>
 </body>
 </html>
